# ov-cli

./: .gitignore  LICENSE  README.md  README_EN.md  THINKING-BUDGET-DEVLOG.md  ov-cli  ov-cli.bat  pyproject.toml
.github/instructions/: system.instructions.md
dlc/: qwen_tts_helper.py
docs/: index.html
openvino-genai-thinking/: README.md  pyproject.toml  setup.py
openvino.genai-2026.2.0.0-optimization/src/cpp/: CMakeLists.txt
openvino.genai-2026.2.0.0-optimization/src/cpp/include/openvino/genai/: generation_config.hpp
openvino.genai-2026.2.0.0-optimization/src/cpp/src/: generation_config.cpp
openvino.genai-2026.2.0.0-optimization/src/cpp/src/gguf_utils/: gguf_tokenizer.cpp  gguf_tokenizer.hpp
openvino.genai-2026.2.0.0-optimization/src/cpp/src/sampling/: logit_processor.hpp  logit_transformers.hpp
openvino.genai-2026.2.0.0-optimization/src/cpp/src/tokenizer/: add_second_input_pass.cpp  add_second_input_pass.hpp  tokenizer_impl.cpp
openvino.genai-2026.2.0.0-optimization/src/python/: py_generation_config.cpp
ov_cli/: __init__.py  __main__.py  asr.py  benchmark.py  chat.py  cli.py  convert.py  features.py  generate.py  image.py  mcp.py  server.py  setup.py  tts.py  ui.py  whisper.py
