[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ov-cli"
version = "0.0.0-dev"
description = "OpenVINO LLM 命令行工具"
requires-python = ">=3.10"
dependencies = [
    "openvino>=2026.2",
    "openvino-tokenizers",
    "openvino-genai",
    "nncf>=3.0",
    "torch",
    "torchvision",
    "transformers>=4.57",
    "tokenizers",
    "jinja2",
    "optimum-intel[openvino]",
    "pillow",
    "numpy",
    "huggingface-hub",
    "safetensors",
    "sentencepiece",
    "wcwidth",
    "accelerate",
    "PyMuPDF",
    "gradio",
    "soundfile",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["ov_cli", "ov_cli.*"]

[project.scripts]
ov-cli = "ov_cli.cli:main"
