[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openvino-genai-thinking"
version = "2026.2.0.0"
description = "Patched OpenVINO GenAI with ThinkingBudgetTransform — force-stop thinking when reasoning_budget_tokens=0"
authors = [
    { name = "PlanteAmigor" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
include = ["openvino_genai*"]

[tool.setuptools.package-data]
openvino_genai = ["*.so", "*.so.2620", "*.pyi"]
